finally have 'tbd' image wrapping correctly, with caption

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -137,26 +137,26 @@ a:hover {
 
 /* section for the challenge1 application image and link */
 .challenge1 {
-    padding-top: 25px;
+    /*padding-top: 25px;
     padding-bottom: 25px;
-    display: flex;
+    display: flex;*/
 }
 .challenge1 img {
-    padding-right: 50px;
+    padding-right: 20px;
     max-height: 800px;
-    max-width: 100%;
     height: auto;
     display: block;
-    position: relative;
+    /*position: relative;
+    max-width: 100%;*/
     
 }
 .challenge1:hover p{
     font-size: 25px;
     color: white;
-    position: absolute;
+    /*position: absolute;
     right: 0px;
     padding-right:60px;
-    padding-top: 25px;
+    padding-top: 25px;*/
 
 }
 .float-right {
@@ -167,40 +167,34 @@ a:hover {
 
 /* section that is intentionally left blank for future projects */
 .tbd {
-    margin-left: 20px;
+    /*margin-left: 20px;
     padding: 20px;
     width: 20%;
-    height: 100%;
+    height: 100%;*/
     display: flex;
 }
 .tbd img {
-    position: relative;
-    display: block;
+    float: left;
+    display: flex;
     max-width: 500px;
-    height: auto;
+    margin-left: 20px;
+    margin-top: 20px;
+    
+    /*height: auto;
+    position: relative;*/
 }
-.coming-soon {
+#coming-soon {
     position: absolute;
     font-size: 24px;
     color: coral;
     left: 0px;
-    padding-left: 50px;
-    text-align: center;
+    padding-left: 40px;
+    padding-top: 25px;
 }
-.float-left {
-    float: left;
-    margin-right: 25px;
-}
-
-
-@media screen and (min-width: 500px) {
-    /* Use flex-direction to stack the navbar, sidebar, and body */
-    .challenge1 {
-      flex-direction: column;
-    }
-    /* Make the sidebar stack below the body */
+@media screen and (max-width: 950px) {
     .tbd {
-      order: 2;
+      clear: right;
+     
     }
   }
 
